# agent-task-runner

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/plans/: 4-issues-fix-plan.md  doc-gap-closure-plan.md  e2e-integration-test-plan.md  gap-closure-plan.md  improvement-plan-v0.5.md  p0-p1-p2-fix-plan.md
.github/workflows/: loop-ci.yml
.loop/: config.json
docs/: integration-spec.md  opencode-tasks-coexistence.md  system-architecture.md
scripts/: split_orchestrator.py
src/loop_kit/: _core.py  cli.py  config.py  dispatch.py  exceptions.py  file_bus.py  git_helpers.py  knowledge.py  orchestrator.py  paths.py  prompts.py  session.py  state.py
tests/: test_e2e_smoke.py  test_integration.py  test_orchestrator.py  test_pm_integration.py
