[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-task-runner"
version = "0.4.0"
description = "PM-driven review-loop orchestrator for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["orchestrator", "ai", "agent", "loop", "codex", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
loop = "loop_kit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-timeout>=2",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loop_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
